style.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #333333;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.nav-wrap {
  position: fixed;
  top: 0;
  left: 0;

  z-index: 999;

  width: 100%;

  transition: box-shadow 0.3s ease;
}

.scrolled {
  box-shadow: 0 3px 10px #5f5f5f;
}

.nav {
  display: flex;
  flex-direction: row;
  align-items: center;

  padding: 0 10px;
  width: 100%;

  /* background-color: rgba(0, 9, 80, 0.5); */
  background-color: #fff;
  height: 80px;

  transition: box-shadow 0.3s ease;
}

.nav .logo {
  z-index: 999;
  overflow: hidden;
  height: 80%;
  margin-right: auto;

  background-color: #fff;
  border-radius: 50%;
}

.nav .logo img {
  height: 80%;
  /* Hardcoded fix lol */
  margin-top: 5px;
}

.nav .nav-links {
  list-style-type: none;
  font-size: 1.5em;
  font-weight: 600;

  transition: left 0.5s ease;
}

.nav .nav-links.desktop {
  height: 100%;

  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.nav .nav-links.mobile {
  background-color: #367e85;
  color: #fff !important;

  position: fixed;
  top: 0;
  left: 110%;
  height: 100%;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.nav .nav-links.mobile.activated {
  left: 0;
}

.nav-link {
  margin-left: 20px;
}

.nav-link > a {
  text-decoration: none;
  color: #367e85;
}

.nav-link > a:hover {
  color: #c92221;
}

.img-link {
  height: 50%;
}

.img-link img {
  height: 100%;
}

.img-link img:hover {
  filter: brightness(1.2);
}

.hamburger-icon-wrapper {
  z-index: 999;
  margin-top: 5px;
  margin-right: 10px;
  display: none;

  transition: color 0.5s ease;
  /* background-color: orange; */
}

#hamburger-icon {
  font-size: 22pt;
  font-weight: 500;
}

.jumbotron {
  overflow: auto;
  /* min-height: 100vh;
  min-height: -webkit-fill-available; */

  /* display: flex; */
  flex-direction: column;
  align-items: center;

  /* background-color: orange; */
}

.jumbotron .text-container {
  position: absolute;
  width: 100%;
  padding: 0 20px;
  background-image: linear-gradient(to bottom, white, white 60%, rgba(255, 255, 255, 0));
  top: 80px;

  /* text-align: center; */

  display: flex;
  flex-direction: column;
  justify-content: center;
  /* align-items: center; */
}

.jumbotron .text-container .header {
  margin-top: 6vh;
}

.jumbotron .text-container .sub-header {
  margin-top: 5px;
  font-weight: 400;
  color: #c92221;
}

.jumbotron .text-container .divider {
  height: 2px;
  background-color: #333333;
  margin-top: 20px;
}

.jumbotron .text-container .learn-more {
  display: block;
  text-decoration: none;
  color: #333333;
  padding: 8px 15px;
  margin-top: 35px;
  margin-bottom: 35px;
  margin-right: auto;
  font-size: 22px;
  border: 3px solid #333333;
}

.jumbotron .text-container .learn-more:hover {
  color: #fff;
  background-color: #333;
}

canvas {
  display: block;
  margin: auto;
  max-width: calc(100% - 40px);
  max-width: 100%;
}

.footer {
  height: 100vh;
  background-color: purple;
}

.white {
  color: #fff !important;
}

/* Media Queries */

@media only screen and (min-width: 768px) {
  .jumbotron .text-container {
    padding: 0 50px;
    text-align: center;
  }

  .jumbotron .text-container .header {
    margin-top: calc(35px + 6vh);
    font-size: 3em;
  }

  .jumbotron .text-container .sub-header {
    margin-top: 15px;
    font-weight: 500;
  }

  .jumbotron .text-container .learn-more {
    margin-left: auto;
  }

  .jumbotron .text-container .divider {
    display: none;
  }
}

@media only screen and (min-width: 992px) {
  canvas {
    margin: auto;
    max-width: 100%;
  }

  .nav,
  .jumbotron .text-container {
    padding: 0 50px;
  }
}

@media only screen and (max-width: 992px) {
  .nav .img-link {
    display: none;
  }

  .hamburger-icon-wrapper {
    display: block;
  }

  .nav-link {
    margin: 20px;
  }
}

